# lustre-test-vms-v2

./: .coverage  .gitignore  CLAUDE.md  Makefile  README.md  SUGGESTED-AGENTS.md  TODO.md  ltvm  manifest  pyproject.toml
.beads/: issues.jsonl  metadata.json
.githooks/: post-commit  pre-commit
docs/: GETTING_STARTED.md  NESTED_VIRTUALIZATION.md  SOFTROCE_SETUP.md  SYSTEM_TEST_PLAN.md  test-nested-passthrough-e2e.sh  test-nested-sriov.sh
lib/: commands.py  config.py  download.py  host_setup.py  image.py  kernel-build-inner-deb.sh  kernel-build-inner.sh  kernel.py  lustre.py  lustre_build.py  package.py  runtime.py  setup.py  validate.py  vmctl.py
ltvm_pkg/: __init__.py  cli.py  completion.py  cross_compile.py  deploy-lustre.sh  deploy.py  dk-filter  host_setup.py  image_build.py  image_export.py  kernel-build-inner-deb.sh  kernel-build-inner.sh  kernel_build.py  ltvm-completion.bash  lustre_build.py  lustre_compat.py  lustre_tree.py  meta_schema.py  mofed_kmod_build.py  paths.py  podman_run.py  priv.py  qemu_run.py  release_package.py  target_config.py  update_check.py  vm_cluster.py  vm_commands.py  vm_net.py  vm_state.py
ltvm_pkg/cli/: __init__.py  build.py  clean.py  cluster.py  deploy.py  fetch.py  targets.py  util.py
qemu/: __init__.py  cli.py  cluster.py  commands.py  deploy-lustre.sh  models.py  net.py  process.py  vm.py  vm.sh
targets/: targets.yaml
tests/: conftest.py  test_arch_propagation.py  test_build_commands.py  test_clean_command.py  test_cli_target_forms.py  test_cluster_cli.py  test_cluster_logic.py  test_config.py  test_cross_compile.py  test_deploy.py  test_fetch_publish.py  test_fetch_sha_hint.py  test_gaps.py  test_image.py  test_image_export.py  test_kernel.py  test_ltvm_cli.py  test_lustre.py  test_lustre_compat.py  test_models.py  test_package.py  test_parser_coverage.py  test_podman_preflight.py  test_podman_run.py  test_qemu_run.py  test_round19_parsers.py  test_round20_regressions.py  test_runtime.py  test_setup.py  test_setup_lnet_config.sh  test_setup_lnet_passthrough_resolve.sh  test_target_commands.py  test_update_check.py  test_validate.py  test_venv_bootstrap.py  test_verbose_traceback.py  test_version_update.py  test_vm_commands.py  test_vm_create_phases.py  test_vm_doctor.py  (+1 more)
(+65 files in other folders)
