[project]
name = "lustre-test-vms"
version = "0.1.0"
description = "Lustre test VM infrastructure"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.15",
    "types-pyyaml>=6.0",
]

[tool.ruff]
# ltvm and qemu/vm.sh are Python despite lacking .py extension
extend-include = ["ltvm", "qemu/vm.sh"]
exclude = ["output/"]
# Format targets 80; lint allows up to 100
line-length = 80

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade
]
pycodestyle.max-line-length = 100

[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=lib --cov-report=term-missing --ignore=tests/e2e"
markers = [
    "e2e: end-to-end tests that require a real VM environment (KVM, vm.py, built images)",
]

[tool.coverage.run]
source = ["lib"]
omit = ["lib/kernel-build-inner.sh"]

[tool.coverage.report]
# Show lines missing coverage; exclude boilerplate
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true

[tool.mypy]
python_version = "3.9"
files = ["ltvm", "lib/"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true
